# Sieve_of_Eratosthenes_CUDA

./: CMakeLists.txt  main.cpp
sitoCPUMultithread/: CMakeLists.txt  README.md  main.cpp
sitoCudaGpu/: sitoCudaGpu.sln
sitoCudaGpu/sitoCudaGpu/: kernel.cu  kernelUltimate.cu  sitoCudaGpu.vcxproj
sitoCudaGpu/sitoCudaGpu/x64/Debug/: sitoCudaGpu.exe.recipe  sitoCudaGpu.ilk
sitoCudaGpu/sitoCudaGpu/x64/Debug/sitoCudaGpu.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sitoCudaGpu.lastbuildstate  sitoCudaGpu.write.1u.tlog
sitoCudaGpu/x64/Debug/: sitoCudaGpu.exp  sitoCudaGpu.lib
